--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-polyfill": "^6.23.0",
     "echarts": "^4.1.0",
     "el-tree-select": "^2.0.3",
+    "el-tree-transfer": "^2.2.0",
     "element-ui": "2.3.3",
     "es6-promise": "^4.2.4",
     "mavon-editor": "^2.5.4",
