--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pws",
+  "name": "codeGenerator",
   "version": "3.1.0",
   "description": "基于Vue.js 2.x系列 + element-ui 内容管理系统解决方案",
   "author": "lin-xin <2981207131@qq.com>",
